WebKit/gtk/webkit/webkitprivate.h
@@ -55,6 +55,7 @@
 #include "HistoryItem.h"
 #include "InspectorClientGtk.h"
 #include "IntPoint.h"
+#include "IntRect.h"
 #include "FrameLoaderClient.h"
 #include "FullscreenVideoController.h"
 #include "Node.h"
@@ -181,6 +182,7 @@ extern "C" {
         CString mainResourceIdentifier;
         PlatformRefPtr<GHashTable> subResources;
         CString tooltipText;
+        WebCore::IntRect tooltipArea;
 
         int currentClickCount;
         WebCore::IntPoint previousClickPoint;
